Updated scss to make sure contact form is shown good on small screen

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -14,6 +14,10 @@ $break-large: 900px;
   src: url('~assets/fonts/Raleway/Raleway-Medium.ttf') format('truetype');
 }
 
+body {
+  width: 100%;
+}
+
 #__nuxt {
   @media screen and (max-width: $break-small) {
     width: 100%;
@@ -26,8 +30,12 @@ $break-large: 900px;
   font-family: 'Poppins', Fallback, sans-serif;
 }
 
-#__layout {
+ #__layout {
   padding: 1em;
+  width: 100%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -97,30 +105,51 @@ nav {
   }
 }
 
-#contact-form {
-  width: 80%;
-  margin: auto;
-
-  .contact-label {
-    width: 15%;
-    float: left;
-    height: 24px;
-    margin: 5px auto;
-    padding: 5px;
-  }
-
-  .contact-input {
+@media screen and (max-width: $break-medium) {
+  #contact-form {
     width: 80%;
-    float: right;
-    margin: 5px auto;
-    padding: 6px;
-  }
+    margin: auto;
 
-  #contact-submit {
-    margin: 20px 25%;
-    width: 50%;
+    .contact-label, .contact-input {
+      display: block;
+      width: 100%;
+      margin: 5px auto;
+      padding: 5px;
+    }
+
+    #contact-submit {
+      margin: 20px 25%;
+      width: 50%;
+    }
   }
 }
+@media screen and (min-width: $break-medium) {
+  #contact-form {
+    width: 80%;
+    margin: auto;
+
+    .contact-label {
+      width: 15%;
+      float: left;
+      height: 24px;
+      margin: 5px auto;
+      padding: 5px;
+    }
+
+    .contact-input {
+      width: 75%;
+      float: right;
+      margin: 5px auto;
+      padding: 6px;
+    }
+
+    #contact-submit {
+      margin: 20px 25%;
+      width: 50%;
+    }
+  }
+}
+
 
 footer {
   clear: both;
